2015-02-15  David Kilzer  <ddkilzer@apple.com>

        REGRESSION (r180082): WebCore Debug builds fail on Mavericks due to weak export symbols
        <http://webkit.org/b/141607>

        * Scripts/check-for-weak-vtables-and-externals: Ignore weak
        externals in Source/WebCore/Configurations/WebCore.unexp when
        building with Xcode 5.x.
        (readXcode5SymbolsToIgnore): Add.

2015-02-15  KwangHyuk Kim  <hyuki.kim@samsung.com>

        [EFL] fix Evas GL engine error.
        https://bugs.webkit.org/show_bug.cgi?id=141621

        Reviewed by Gyuyoung Kim.

        As new elm engine api was added from efl 1.10, replace elm_config_preferred_engine_set with elm_config_accel_preference_set.

        * MiniBrowser/efl/main.c:
        (elm_main):

2015-02-14  Csaba Osztrogonác  <ossy@webkit.org>

        [buildbot] Enable run-api-tests on release Mac bots
        https://bugs.webkit.org/show_bug.cgi?id=141518

        Reviewed by Darin Adler.

        * BuildSlaveSupport/build.webkit.org-config/master.cfg:
        (RunUnitTests):
        (BuildFactory.__init__):
        (TestFactory.__init__):
        (BuildAndTestFactory.__init__):
        (RunUnitTests.start): Deleted.
        (unitTestsSupported): Deleted.

2015-02-13  Anders Carlsson  <andersca@apple.com>

        Add a move constructor and move assignment operator to Deque
        https://bugs.webkit.org/show_bug.cgi?id=141571

        Reviewed by Andreas Kling.

        * TestWebKitAPI/Tests/WTF/Deque.cpp:
        (TestWebKitAPI::TEST):

2015-02-13  Csaba Osztrogonác  <ossy@webkit.org>

        run-jsc-stress-tests --remote should skip profiler tests
        https://bugs.webkit.org/show_bug.cgi?id=141470

        Reviewed by Filip Pizlo.

        * Scripts/run-jsc-stress-tests:

2015-02-13  Anders Carlsson  <andersca@apple.com>

        Add an initializer list constructor to Deque
        https://bugs.webkit.org/show_bug.cgi?id=141565

        Reviewed by Andreas Kling.
