@@ -1,3 +1,9 @@
+2015-02-16  Andrzej Badowski  <a.badowski@samsung.com>
+
+        Unreviewed. Add myself as a committer.
+
+        * Scripts/webkitpy/common/config/contributors.json:
+
 2015-02-15  David Kilzer  <ddkilzer@apple.com>
 
         REGRESSION (r180082): WebCore Debug builds fail on Mavericks due to weak export symbols
